Fix component list overflow (#1129)
* Fix component list overflow background color

* Gradient on component-tree-item actions

--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -35,7 +35,7 @@
   --component-name: #1171E8;
   --component-brackets-selected: rgba(255, 255, 255, 0.4);
   --component-attr: #DB00A9;
-  --component-highlighted-bg: rgba(0, 0, 0, 0.05);
+  --component-highlighted-bg: #F2F2F3;
   --pill-bg: rgba(0, 0, 0, 0.1);
   --pill-bg-active: rgba(255, 255, 255, 0.3);
   --warning-text: #735c0f;
@@ -79,7 +79,7 @@
   --component-name: #77BEFF;
   --component-brackets-selected: rgba(255, 255, 255, 0.4);
   --component-attr: #FE7AE9;
-  --component-highlighted-bg: rgba(255, 255, 255, 0.075);
+  --component-highlighted-bg: #333333;
   --pill-bg: rgba(255, 255, 255, 0.2);
   --pill-bg-active: rgba(255, 255, 255, 0.3);
   --warning-text: #8ca3f0;
